--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,16 @@
     <title>Project276</title>
     <%= csrf_meta_tags %>
 
-    <link rel="stylesheet" type="text/css" href="navBar.css">
-    <script src="navBar.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="application.css">
+    <script src="application.js" type="text/javascript"></script>
   </head>
 
 
   <body>
     <div class="nav-fixer">
     <ul class="topnav" id="topNavBar_left">
-      <li class="left"><a href="Home">Home</a></li>
+<!---      <li class="left"><a href="Home">Home</a></li> --->
+      <%= link_to '<li class="left">Home</li>'.html_safe, welcome_index_path %>
       <li class="left"><input type="text" name="keyword"></li>
       <li class="left"><input type="submit" value="Search"></li>
       <li class="account">
@@ -24,9 +25,6 @@
       </li>
     </ul>
   </div>
-
-  <div class="logo">
-    <img class="logo"><src="logo.jpg" alt="logo" align="middle">
-  </div>
+    <%= yield %>
   </body>
 </html>
