--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
-    <%= yield %>
+
+  	
+	  <% if current_user %>
+	    <span>
+	    	Hello <%= current_user.username %>
+	    </span>
+	    <%= link_to "Log out", logout_path %>
+	  <% else %>
+	    <%= link_to "Sign up", new_user_path %> or
+	    <%= link_to "log in", new_session_path %>
+	  <% end %>
+
+
+		<%= yield %>
+  
   </body>
 </html>
