--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,4 @@
 
-<H1>
-
 <div class="logo">
-  <img class="logo"><src="logo.jpg" alt="logo" align="middle">
+  <img  class= "logo" src="/logo.jpg" alt="logo" />
 </div>
