--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,10 @@
     <title>Project276</title>
     <%= csrf_meta_tags %>
 
-    <link rel="stylesheet" type="text/css" href="application.css">
-    <script src="application.js" type="text/javascript"></script>
+  <!---  <link rel="stylesheet" type="text/css" href="application.css">
+    <script src="application.js" type="text/javascript"></script> --->
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
   </head>
 
 
