--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,12 @@
 <div class="logo">
   <img  class= "logo" src="/logo.jpg" alt="logo" />
 </div>
-<div class="mainpagestuff">
-  <%= link_to "Create Account", new_user_path, :class => "main-page-buttons"%>
-  <%= link_to "Login", new_user_path, :class => "main-page-buttons" %> <!--- fix this link once page is created -->
-  <h1> Recipes of the week</h2>
+<div class="main-page">
+  <div class="main-page-links">
+    <%= link_to "Create Account", new_user_path, :class => "main-page-buttons"%>
+    <%= link_to "Login", new_user_path, :class => "main-page-buttons" %> <!--- fix this link once page is created -->
+  </div>
   
+    <h1> Recipes of the week</h2>
+  </div>
 </div>
