--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,15 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<table>
+  <h1>Users</h1>
+<table class="table">
   <thead>
     <tr>
       <th>Username</th>
       <th>Email</th>
-      <th>Password</th>
-      <th>Preference</th>
+      <th>Healthlabel</th>
+      <th>Dietlabel</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,16 +19,18 @@
       <tr>
         <td><%= user.username %></td>
         <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= user.preference_id %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= user.preference.healthlabel.first.name rescue "" %></td>
+        <td><%= user.preference.dietlabel.first.name rescue "" %></td>
+
+        <td><%= link_to 'View recipies', home_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+</div>
