--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<% if current_user %>
+<% if current_user.role==1  %>
+  <h1 class="page-headers">Error: You are not authorized to access this page! </h1>
+<% else %>
 <h1>Users</h1>
 
 <table>
@@ -31,3 +34,5 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+<% end %>
+<% end %>
