--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New User</h1>
+<%if current_user %>
+  <% if current_user.role ==1%>
+  <h1 class="page-headers"> You are already logged in</h1>
 
-<%= render 'form', user: @user %>
+  <%else%>
+  <h1 class= "page-headers"> New User </h1>
 
-<%= link_to 'Back', users_path %>
+  <%= render 'form', user: @user %>
+  <%= link_to 'Back', users_path %>
+  <%end%>
+
+<%else%>
+  <h1 class= "page-headers"> Join the Community! </h1>
+    <%= render 'form2', user: @user %>
+
+<%end%>
