--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Hello <%= current_user.username %>
             <span class="caret"></span></a>
             <ul class="dropdown-menu">
+
+              <li><%= link_to "My recipes", my_recipes_user_path(current_user) %></li>
               <li><%= link_to "Log out", logout_path %></li>
             </ul>
           </li>
