--- a/app/views/users/_recipies.html.erb
+++ b/app/views/users/_recipies.html.erb
@@ -3,5 +3,8 @@
 <tr>
   <td> <a target="_blank" href="<%= r["url"]%>"><img src="<%= r["image"]%>" width="50"> &nbsp;&nbsp; <%= r["label"] %></a></td>
   <td> <%= r["healthLabels"].to_sentence %></td>
+  <td> <%= r["dietLabels"].to_sentence %></td>
+  <td><a href="javascript:void(0);" onclick="save_recipe($(this),'<%= r['uri'] %>')"> Save recipe</a>
+  </td>
 </tr>
 <% end %>
