--- a/app/views/users/_form2.html.erb
+++ b/app/views/users/_form2.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'form' %>
 <%= form_for(user) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
@@ -10,7 +11,7 @@
       </ul>
     </div>
   <% end %>
-
+<div class="enclosure">
   <div class="field">
     <%= f.label :username %>
     <%= f.text_field :username %>
@@ -23,7 +24,7 @@
 
   <div class="field">
     <%= f.label :password %>
-    <%= f.password_field :password %>
+    <%= f.password_field :password %><br>
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div>
@@ -55,4 +56,5 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
