--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,10 +4,12 @@ ul.topnav {
     margin:0 auto;
     padding: 0;
     overflow: hidden;
-    background-color: #990000;
+    background: url('../barBackground.jpeg');
+    box-shadow: inset 0 0 0 1000px rgba(153,0,0,0.8);
     top: 0;
     width: 100%;
 }
+
 
 li{
   float: left;
