--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -5,6 +5,7 @@ hits = @json_resp["hits"]
 
 
 <div class="container">
+  <p id="notice"><%= notice %></p>
 
   <% if @json_resp["error"].present? %>
   <p class="well"> <%=  @json_resp["error"]%> </p>
@@ -27,12 +28,12 @@ hits = @json_resp["hits"]
 
   <div class="form-group">
     <%= p.label :healthlabel_ids %>
-    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, {}, {class: "form-control"} %>
+    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, {:include_blank => "Select"}, {class: "form-control"} %>
   </div>
 
   <div class="form-group">
     <%= p.label :dietlabel_ids %>
-    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, {}, {class: "form-control"}  %>
+    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, {:include_blank => "Select"}, {class: "form-control"}  %>
   </div>
   <input type="hidden" name="redirect_to" value="home" />
   <% end %>
