--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,114 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+
+ul.topnav {
+    list-style-type: none;
+    margin:0 auto;
+    padding: 0;
+    overflow: hidden;
+    background: url('../barBackground.jpeg');
+    box-shadow: inset 0 0 0 1000px rgba(153,0,0,0.8);
+    top: 0;
+    width: 100%;
+}
+
+
+li{
+  float: left;
+  display:inline-block;
+  font-size: 20px;
+  padding: 14px 16px;
+  text-decoration: none;
+    font-family: "Tahoma", Geneva, sans-serif;
+
+}
+
+li, .dropButton{
+  font-size: 20px;
+  display: inline-block;
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+
+}
+
+li input{
+  padding: 10px 15px;
+}
+
+button.dropButton{
+  border: none;
+}
+li.account{
+  float: right;
+  margin-right: 40px;
+  display: inline-block;
+}
+div.dropDownContent {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+div.dropDownContent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+li a, .dropButton {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+li.account:hover .dropDownContent {
+    display: block;
+}
+div.logo {
+ text-align: center;
+}
+img.logo{
+  display:in-line block;
+  margin-top: 50px;
+}
+.main-page-buttons {
+  font-size: 50px;
+  font-family: "Tahoma", Geneva, sans-serif;
+  background-color: #990000;
+  color: white;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+  text-decoration:none;
+  border-radius:10px;
+
+}
+.main-page-buttons:visited{
+  font-color:white;
+  text-decoration:none;
+}
+div.main-page{
+
+}
+div.main-page-links{
+  text-align:center;
+
+}
+img.logo-in-nav{
+  width: 20%;
+  height:90%;
+}
+.page-headers{
+
+}
+div.main-page{
+  margin-left:20px;
+}
