--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,42 +4,43 @@
     <title>Project276</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+  <!---  <link rel="stylesheet" type="text/css" href="application.css">
+    <script src="application.js" type="text/javascript"></script> --->
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
   </head>
+
 
   <body>
 
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Foodnatic</a>
-        </div>
-        <ul class="nav navbar-nav pull-right">
-           <% if current_user %>
-          <li class="active"><a href="<%= home_user_path(current_user)%>">Home</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Hello <%= current_user.username %>
-            <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-
-              <li><%= link_to "My recipes", my_recipes_user_path(current_user) %></li>
-              <li><%= link_to "Log out", logout_path %></li>
-            </ul>
-          </li>
+    <div class="nav-fixer">
+    <ul class="topnav" id="topNavBar_left">
+<!---      <li class="left"><a href="Home">Home</a></li> --->
+      <%= link_to '<img  class= "logo-in-nav" src="/logo-reverse.png" alt="Home"/>'.html_safe, welcome_index_path %>
+  <!---    <li class="left"><input type="text" name="keyword"></li>
+      <li class="left"><input type="submit" value="Search"></li> -->
+      <li class="account">
+        <a href="#" class="dropButton">Account</a>
+        <div id="accountDropDownItems" class="dropDownContent">
+          <% if current_user %>
+      	  <!---  <span>
+      	    	Hello <%= current_user.username %>
+      	    </span> --->
+            <%= link_to "Settings*fix", new_user_path%> <!--- TODO fix paths--->
+            <%= link_to "Favorite Recipes*fix", new_user_path%>
+      	    <%= link_to "Log out", logout_path %>
       	  <% else %>
-             <li><%= link_to "Sign up", new_user_path %></li>
-             <li><%= link_to "log in", new_session_path %></li>
+      	    <%= link_to "Sign up", new_user_path %>
+      	    <%= link_to "Log in", new_session_path %>
       	  <% end %>
+        </div>
+      </li>
+    </ul>
+  </div>
 
-        </ul>
-      </div>
-    </nav>
 
-		<%= yield %>
-
+  <div class="main-div">
+    <%= yield %>
+  </div>
   </body>
 </html>
