small ui title changes and ability to heroku local web

--- a/app/views/users/my_recipes.html.erb
+++ b/app/views/users/my_recipes.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 
   <% if @recipes.size == 0 %>
-    <p class="well"> No save recipes</p>
+    <p class="well"> No saved recipes!</p>
   <% end %>
 
   <% if @recipes.size > 0%>
