--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,6 +33,7 @@
     <%= f.password_field :password_confirmation %>
   </div>
 
+<% if current_user %>
   <%= fields_for @user.preference do |p| %>
 
   <div class="field">
@@ -44,9 +45,22 @@
     <%= p.label :dietlabel_ids %>
     <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
   </div>
+  <%end%>
+<% else %>
+  <%= fields_for @preference do |p| %>
 
+  <div class="field">
+    <%= p.label :healthlabel_ids %>
+    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
+  </div>
 
-  <% end %>
+  <div class="field">
+    <%= p.label :dietlabel_ids %>
+    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
+  </div>
+  <%end%>
+
+<% end %>
 
   <div class="actions">
     <%= f.submit class: "btn btn-primary"%>
