--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -37,12 +37,12 @@
   <%= fields_for @user.preference do |p| %>
 
   <div class="field">
-    <%= p.label :healthlabel_ids %>
+    <%= p.label "Health Label" %><!--- was :healthlabel_ids --->
     <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
   </div>
 
   <div class="field">
-    <%= p.label :dietlabel_ids %>
+    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids --->
     <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
   </div>
   <%end%>
@@ -50,12 +50,12 @@
   <%= fields_for @preference do |p| %>
 
   <div class="field">
-    <%= p.label :healthlabel_ids %>
+    <%= p.label "Health Label" %> <!--- was :healthlabel_ids --->
     <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
   </div>
 
   <div class="field">
-    <%= p.label :dietlabel_ids %>
+    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids --->
     <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
   </div>
   <%end%>
