--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -27,12 +27,12 @@ hits = @json_resp["hits"]
   <%= fields_for @user.preference do |p| %>
 
   <div class="form-group">
-    <%= p.label :healthlabel_ids %>
+    <%= p.label "Health Label" %> <!---was :healthlabel_ids --->
     <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, {:include_blank => "Select"}, {class: "form-control"} %>
   </div>
 
   <div class="form-group">
-    <%= p.label :dietlabel_ids %>
+    <%= p.label "Diet Label" %> <!--- was: :dietlabel_ids --->
     <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, {:include_blank => "Select"}, {class: "form-control"}  %>
   </div>
   <input type="hidden" name="redirect_to" value="home" />
