--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -47,7 +47,8 @@ hits = @json_resp["hits"]
   <input type="hidden" id="to" value="<%= @json_resp["to"] %>" />
   <table class="table">
     <thead>
-      <tr>
+      <tr class="table">
+        <th></th>
         <th>Recipe</th>
         <th>Health Label's</th>
         <th>Diet Label's</th>
