--- a/app/views/users/_recipies.html.erb
+++ b/app/views/users/_recipies.html.erb
@@ -5,7 +5,7 @@
   <td> <a target="_blank" href="<%= r["url"]%>"><%= r["label"] %> </a></td>
   <td> <%= r["healthLabels"].to_sentence %></td>
   <td> <%= r["dietLabels"].to_sentence %></td>
-  <td><a href="javascript:void(0);" onclick="save_recipe($(this),'<%= r['uri'] %>')"> Save recipe</a>
+  <td><a href="javascript:void(0);" onclick="save_recipe($(this),'<%= r['uri'] %>')"> Saved</a>
   </td>
 </tr>
 <% end %>
