--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -34,6 +34,13 @@
   </div>
 
 <% if current_user %>
+  <% if current_user.role == 2 %>
+    <div class="field">
+      <%= f.label :role %>
+      <%= f.text_field :role %>
+    </div>
+  <% end %>
+
   <%= fields_for @user.preference do |p| %>
 
   <div class="field">
