--- a/app/views/users/adminhome.html.erb
+++ b/app/views/users/adminhome.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Username</th>
       <th>Email</th>
+      <th>Role</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,7 +14,16 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.username %></td>
+
         <td><%= user.email %></td>
+        <td>
+					<% if user.role == 2 %>
+						Admin
+					<% else %>
+						User
+					<% end %>
+					 (<%=user.role%>)
+        </td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
