--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,13 +12,14 @@
 </p>
 
 <p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
+	<strong>Role: </strong>
+	<% if @user.role == 2 %>
+		Admin
+	<% else %>
+		User
+	<% end %>
+	(<%=@user.role%>)
 
-<p>
-  <strong>Preference:</strong>
-  <%= @user.preference_id %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
