--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
       	    </span> --->
             <%= link_to "Recommended Recipes", home_user_path(current_user) %>
             <%= link_to "Favorite Recipes",  my_recipes_user_path(current_user) %>
+            <% if current_user.role == 2 %>
+              <%= link_to "Admin Panel", users_adminhome_path %>
+            <% end %>
       	    <%= link_to "Settings", edit_user_path(current_user)%>
             <%= link_to "Log out", logout_path %>
       	  <% else %>
