--- a/app/views/users/_recipies.html.erb
+++ b/app/views/users/_recipies.html.erb
@@ -5,13 +5,11 @@
   <td> <a target="_blank" href="<%= r["url"]%>"><%= r["label"] %> </a></td>
   <td> <%= r["healthLabels"].to_sentence %></td>
   <td> <%= r["dietLabels"].to_sentence %></td>
-<!---  <% if recipe_exists(r['url']) %>
-  <td><a href="javascript:void(0);">Saved</a>
+  <% if User.curr_recipe_exists(@user, r['uri']).to_i > 0 %>
+  	<td><a href="javascript:void(0);"> Saved </a>
+  <% else %>
+  	<td><a href="javascript:void(0);" onclick="save_recipe($(this),'<%= r['uri'] %>')"> Save recipe</a>
   </td>
-  <% else %> --->
-  <td><a href="javascript:void(0);" onclick="save_recipe($(this),'<%= r['uri'] %>')"> Save Recipe</a>
-  </td>
-<!---
-  <% end %> ---> 
+  <% end %>
 </tr>
 <% end %>
