--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,7 +113,7 @@ div.main-page{
 }
 table.table {
   font-family: "Tahoma", Geneva, sans-serif;
-  border collapse:collapse;
+  border-collapse:collapse;
 }
 table.table a:link, table.table a:visited, table a:active{
   text-decoration:none;
