--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,22 @@
-
 nav.navbar-default {
-    list-style-type: none;
-    margin:0 auto;
-    padding: 0;
-    overflow: hidden;
     background: url('../barBackground.jpeg');
     box-shadow: inset 0 0 0 1000px rgba(153,0,0,0.8);
-    top: 0;
-    width: 100%;
 }
 
+a{ /* set default font size of text to 25px */
+  font-size: 25px;
+}
+
+@media (min-width: 979px){ /* only screen bigger than 979px can hover */
+  ul.navbar-right li.dropdown:hover > ul.dropdown-menu{
+    display:block;
+  }
+}
+
+li.dropdown a.dropdown-toggle{
+  color: white;
+  font-size: 40;
+}
 
 li{
   display:inline-block;
@@ -19,128 +26,12 @@ li{
   font-family: "Tahoma", Geneva, sans-serif;
 }
 
-li, .dropButton{
-  font-size: 20px;
-  display: inline-block;
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
 
-}
 
 li input{
   padding: 10px 15px;
 }
-
-button.dropButton{
-  border: none;
-}
-li.account{
-  float: right;
-  margin-right: 40px;
-  display: inline-block;
-}
-div.dropDownContent {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-div.dropDownContent a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-li a, .dropButton {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-li.account:hover .dropDownContent {
-    display: block;
-}
-div.logo {
- text-align: center;
-}
-img.logo{
-  display:in-line block;
-  margin-top: 50px;
-}
-.main-page-buttons {
-  font-size: 50px;
-  font-family: "Tahoma", Geneva, sans-serif;
-  background-color: #990000;
-  color: white;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-  text-decoration:none;
-  border-radius:10px;
-
-}
-.main-page-buttons:visited{
-  font-color:white;
-  text-decoration:none;
-}
-div.main-page{
-
-}
-div.main-page-links{
-  text-align:center;
-
-}
-img.logo-in-nav{
-  width: 20%;
-  height:90%;
-}
-.page-headers{
-
-}
-div.main-page{
-  margin-left:20px;
-}
-table.table {
-  font-family: "Tahoma", Geneva, sans-serif;
-  border-collapse:collapse;
-}
-table.table a:link, table.table a:visited, table a:active{
-  text-decoration:none;
-  color:#990000;
-
-}
-th.table, td.table{
-  padding:10px;
-  font-size:50px
-}
-th.table{
-  font-size:50px;
-}
-
-table.table a:hover {
-  text-decoration:underline;
-  color: #727272;
-}
-table.td {
-
-}
-
-
-#notice {
-  color: red;
-  font-size: 30px ;
-}
-
-#error_explanation ul li {
-  color: red;
+img{
+  width: 50%;
+  height:10%;
 }
