--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
 
   <!---  <link rel="stylesheet" type="text/css" href="application.css">
     <script src="application.js" type="text/javascript"></script> --->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -31,7 +33,14 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">hi</a></li>
+                <% if current_user %>
+                  <li><%= link_to "Settings*fix", new_user_path%> <!--- TODO fix paths---></li>
+                  <li><%= link_to "Favorite Recipes*fix", new_user_path%></li>
+            	    <li><%= link_to "Log out", logout_path %></li>
+            	  <% else %>
+            	    <li><%= link_to "Sign up", new_user_path %></li>
+            	    <li><%= link_to "Log in", new_session_path %></li>
+            	  <% end %>
               </ul>
             </li> <!-- dropdown -->
           </ul> <!-- nav navbar-nav navbar-right -->
