--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,5 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', welcome_index_path %>
+<a href="#"><%= link_to 'Back', welcome_index_path %></a>
 </div>
