--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
-nav.navbar-default {
+nav.navbar-default  {
     background: url('../barBackground.jpeg');
     box-shadow: inset 0 0 0 1000px rgba(153,0,0,0.8);
+    margin-bottom: 10%;
 }
 
 a{ /* set default font size of text to 25px */
@@ -26,12 +27,15 @@ li{
   font-family: "Tahoma", Geneva, sans-serif;
 }
 
-
-
 li input{
   padding: 10px 15px;
 }
+
 img{
   width: 50%;
   height:10%;
+}
+
+body{
+  padding-top: 10%;
 }
