--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <div>
           <ul class="nav navbar-nav navbar-right">
             <!-- Search Bar (does not work yet) -->
-            <li><input type="text" class="Seach" placeholder="Search"></li>
+            <li><input type="text" class="Seach" placeholder="Search Recipes.."></li>
             <!-- drowndown menu -->
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
