changed title from project276 to foodnatic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project276</title>
+    <title>FoodNatic</title>
     <%= csrf_meta_tags %>
 
   <!---  <link rel="stylesheet" type="text/css" href="application.css">
