--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,23 @@
 <%= stylesheet_link_tag 'index' %>
 <div class="logo">
-  <img  class= "logo" src="/logo.jpg" alt="logo" />
+  <img  class= "logo" src="/logo-transparent.png" alt="logo" />
 </div>
-<div class="main-page">
-  <div class="main-page-links">
-	  <% if current_user %>
-	    <h1>
-	    	Hello <%= current_user.username %>
-	    </h1>
-	  <% end %>
-    <input type="text" class="mainSearch" placeholder="Search Recipes..">
-  </div>
+<div class="container">
+	<div class="main-page">
+	  <div class="main-page-links">
+		  <% if current_user %>
+		    <h1>
+		    	Hello <%= current_user.username %>
+		    </h1>
+		  <% end %>
+				<div class="input-group stylish-input-group">
+		    <input type="text" class="mainSearch form-control" placeholder="Search Recipes..">
+		    <span class="input-group-addon">
+		        <button type="submit">
+		            <i class="material-icons">save</i>
+		        </button>  
+		    </span>
+		  </div>
+	  </div>
+	</div>
 </div>
