change icon to search

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 		    <input type="text" class="mainSearch form-control" placeholder="Search Recipes..">
 		    <span class="input-group-addon">
 		        <button type="submit">
-		            <i class="material-icons">save</i>
+		            <i class="material-icons">search</i>
 		        </button>  
 		    </span>
 		  </div>
