Changed display on favorite recipes page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,10 +61,13 @@ body{
 
 
 .search-bar .search-button{
-    background: white; 
+    background: white;
 }
 
 .search-bar button{
     border:0;
     background:transparent;
+}
+.table table{
+
 }
