--- a/app/views/users/my_recipes.html.erb
+++ b/app/views/users/my_recipes.html.erb
@@ -7,7 +7,7 @@
 
   <% if @recipes.size > 0%>
   <p></p>
-
+<!--
     <table class="table">
       <thead>
         <tr>
@@ -16,21 +16,24 @@
           <th></th>
         </tr>
       </thead>
-      <tbody id="recipies_rows">
-        <% @recipes.each do |r| %>
-        <tr>
-          <td> <a target="_blank" href="<%= recipe_path(r) %>"><img src="<%= r.image_url%>" width="130"> </a></td>
-          </td>
-          <td> <a target="_blank" href="<%= recipe_path(r) %>"><%= r.recipe_name %></a></td>
-          </td>
-          <td> <i class="material-icons">save</i> <a href="javascript:void(0);" onclick="unsave_recipe($(this),'<%= r['uri'] %>')">Remove</a>
-          </td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+      <tbody id="recipies_rows"> -->
+      <% @recipes.in_groups_of(3,false).each do |group| %>
+        <div class="row"> <!-- only have a new row every 3 rows -->
+        <% group.each do |r| %>
+        <div class="col-md-4 portfolio-item">
+          <a target="_blank" href="<%= recipe_path(r) %>">
+          <img class="img-responsive" src="<%= r.image_url%>" alt="">
+          </a>
+          <a target="_blank" href="<%= recipe_path(r) %>">
+          <h3><%= r.recipe_name %></h3> </a>
+          <p><i class="material-icons">save</i> <a href="javascript:void(0);" onclick="unsave_recipe($(this),'<%= r['uri'] %>')">Remove</a></p>
 
-  <% end %>
+        </div>
+        <%end%>
+      </div>
+      <% end %>
+
+  <%end %>
 </div>
 
 <!--- should this be added to a javascript file instead of within this page?? --->
