--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,7 +6,7 @@
     <div class="col-xs-6">
       <div class="row">
         <div class="col-xs-4">
-          <img src="<%= @recipe.image_url %>" width="100"/>
+          <img src="<%= @recipe.image_url %>" style='width="300"'/>
         </div>
         <div class="col-xs-8">
           <h3><%= @recipe.recipe_name %></h3>
@@ -47,4 +47,3 @@
       </div>
     </div>
   </div>
-
