big update on API to use new technique

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -14,3 +14,12 @@ div.field{
   text-align: right;
   margin-right: 35%;
 }
+
+div.chosen-field {
+  text-align: right;
+  margin-right: 35%;
+}
+
+li {
+  text-align: left;
+}
