--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,3 +4,6 @@
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+<script>
+ $(".chosen-select").chosen({width: "37%"}); 
+</script>
