--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,21 +5,24 @@
     <%= csrf_meta_tags %>
 
   <!---  <link rel="stylesheet" type="text/css" href="application.css">
-    <script src="application.js" type="text/javascript"></script> --->
+    <script src="application.js" type="text/javascript"></script> -->
     <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "application"  %>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.6.2/chosen.css">
   </head>
 
 
-  <body>
+    <body   <% if content_for?(:body_attributes) %>
+    <%= yield(:body_attributes) %> 
+  <% end %>>
 
     <div class="nav-fixer">
     <ul class="topnav" id="topNavBar_left">
-<!---      <li class="left"><a href="Home">Home</a></li> --->
+<!---      <li class="left"><a href="Home">Home</a></li> -->
       <%= link_to '<img  class= "logo-in-nav" src="/logo-reverse.png" alt="Home"/>'.html_safe, welcome_index_path %>
-  <!---    <li class="left"><input type="text" name="keyword"></li>
+  <!--    <li class="left"><input type="text" name="keyword"></li>
       <li class="left"><input type="submit" value="Search"></li> -->
       <li class="account">
         <a href="#" class="dropButton">Account</a>
@@ -27,8 +30,8 @@
           <% if current_user %>
       	  <!---  <span>
       	    	Hello <%= current_user.username %>
-      	    </span> --->
-            <%= link_to "Recommended Recipes", home_user_path(current_user) %>
+      	    </span> -->
+            <%= link_to "Recommended Recipes", home_user_path(current_user), 'data-no-turbolink' => true %>
             <%= link_to "Favorite Recipes",  my_recipes_user_path(current_user) %>
             <% if current_user.role == 2 %>
               <%= link_to "Admin Panel", users_adminhome_path %>
