--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,7 +32,7 @@
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div>
-
+<br/>
 <% if current_user %>
   <% if current_user.role == 2 %>
     <div class="field">
@@ -41,29 +41,31 @@
     </div>
   <% end %>
 
-  <%= fields_for @user.preference do |p| %>
+  <%= fields_for @user.preference do |p| %> 
 
-  <div class="field">
-    <%= p.label "Health Label" %><!--- was :healthlabel_ids --->
-    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
+
+  <div class="chosen-field">
+    <%= p.label "Health Label" %><!--- was :healthlabel_ids -->
+    <%= p.select( :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' } )%>
   </div>
 
-  <div class="field">
-    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids --->
-    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
+  <div class="chosen-field">
+    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids -->
+    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' } %>
   </div>
   <%end%>
 <% else %>
   <%= fields_for @preference do |p| %>
 
-  <div class="field">
-    <%= p.label "Health Label" %> <!--- was :healthlabel_ids --->
-    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
+  <div class="chosen-field">
+    <%= p.label "Health Label" %> <!--- was :healthlabel_ids -->
+    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' }   %>
   </div>
+<br/>
 
-  <div class="field">
-    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids --->
-    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
+  <div class="chosen-field">
+    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids -->
+    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' }   %>
   </div>
   <%end%>
 
