--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,4 +1,6 @@
-
+  <% content_for(:body_attributes) do %>
+    data-no-turbolink="true"
+  <% end %>
 
 
 <!---
@@ -35,7 +37,8 @@
   <%= f.submit "Update preference", class: "btn btn-primary"%>
 
   <% end %>
---->
+-->
+
 <h1 class="page-headers">Recommended for You </h1> 
 
   <p></p>
@@ -50,7 +53,7 @@
       </tr>
     </thead>
     <tbody id="recipies_rows">
-      <%= render "recipies" , user: @user%>
+      <span class="insertDynamicData"> </span>
     </tbody>
   </table>
 
@@ -60,6 +63,46 @@
 
 
 <script>
+
+
+function tableData(r) {
+    tdata = ""
+    tdata += '<tr>'
+    tdata += '<td> <a target="_blank" href="'+r["url"]+'"><img src="'+r["image"]+'" width="120"> &nbsp; </a></td>'
+    tdata += '<td> <a target="_blank" href="'+r["url"]+'">'+r["label"]+' </a></td>'
+    tdata += ' <td> '+r["healthLabels"] +' </td>'
+    tdata += '<td> '+r["dietLabels"] + '</td>'
+    tdata += ' <td><a href="javascript:void(0);"> Saved </a>'
+    tdata += '</td>'
+    tdata += '</tr>'
+  return tdata
+}
+
+$(document).on('turbolinks:load', function() {
+  console.log("TURBOLINKS LOAD")
+})
+var links = [] 
+var foundItems = []
+var finishedCalls = 0
+$(document).ready(function(){
+
+    console.log("RUNNING NOW")
+    <% @foundLinks.each do |fl| %>
+    
+    $.ajax({
+      method: "GET",
+      url: "<%= individual_recipes_user_path(@user) %>",
+      data: {uri: "<%= fl %>"}
+    }).done(function(resp) {
+      foundItems.push(resp)
+      finishedCalls += 1
+      $(".insertDynamicData").append(tableData(foundItems[finishedCalls-1]))
+    })
+    <% end %>
+
+})
+
+
 function more(){
   $("#more_btn").addClass("disabled","disabled");
   $("#more_btn").removeClass( "btn-warning");
@@ -70,7 +113,7 @@ function more(){
     method: "GET",
     url: "<%= home_user_path(@user) %>",
     data: { id: "<%= params[:id] %>" ,to: $("#to").val()},
-    dataType: "script"
+    dataType: "script" 
   }).done(function() {
     $("#more_btn").removeClass("disabled","disabled");
     $("#more_btn").removeClass( "btn-default");
@@ -80,6 +123,8 @@ function more(){
 }
 
 
+
+  
 
 function save_recipe(ele,url){
   $(ele).text("Saving..");
