--- a/app/views/users/my_recipes.html.erb
+++ b/app/views/users/my_recipes.html.erb
@@ -6,23 +6,22 @@
   <% end %>
 
   <% if @recipes.size > 0%>
-  <p></p>
   <% @recipes.in_groups_of(4,false).each do |group| %>
-    <div class="row portfolio"> <!-- only have a new row every 3 rows -->
+  <div class="row portfolio"> <!-- only have a new row every 3 rows -->
     <% group.each do |r| %>
     <div class="col-sm-6 col-md-3">
-      <div class="thumnbail">
-        <a target="_blank" href="<%= recipe_path(r) %>">
-        <img class="img-responsive" src="<%= r.image_url%>" alt="">
-        </a>
-        <a target="_blank" href="<%= recipe_path(r) %>">
-        <h3><%= r.recipe_name %></h3> </a>
-        <p><a href="javascript:void(0);" onclick="unsave_recipe($(this),'<%= r['uri'] %>')"><i class="material-icons">delete_forever</i> Remove</a></p>
+      <div class="thumbnail">
+      <a target="_blank" href="<%= recipe_path(r) %>">
+      <img id="saved-image" class="img-responsive" src="<%= r.image_url%>" alt="" >
+
+
+      <h3 id="recipe-name"><%= r.recipe_name %></h3> </a>
+      <p><a href="javascript:void(0);" onclick="unsave_recipe($(this),'<%= r['uri'] %>')"><i class="material-icons">delete_forever</i> Remove</a></p>
     </div>
+    </div>
+    <%end%>
   </div>
-        <%end%>
-      </div>
-      <% end %>
+  <% end %>
 
   <%end %>
 </div>
