--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,7 +2,7 @@ nav.navbar-default  {
     background: url('../barBackground.jpeg');
     box-shadow: inset 0 0 0 1000px rgba(153,0,0,0.8);
     margin-bottom: 10%;
-    padding-bottom: 3px;
+    padding-bottom: 0px;
 }
 
 a{ /* set default font size of text to 35px */
@@ -52,7 +52,7 @@ li{
 }
 
 #saved-img img{
-  width: 100%;
+  width: 200%;
 
 }
 
@@ -69,6 +69,10 @@ body{
     border:0;
     background:transparent;
 }
+
 #recipe-name{
-  font-size: 80%;
+  font-size: 90%;
 }
+#remove-recipe{
+  font-size:120%;
+  }
