--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
 
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.js"></script>
   </head>
 
 
@@ -28,16 +29,17 @@
         <div>
           <ul class="nav navbar-nav navbar-right">
             <li class="left">
-        <!-- For now, can only search if a current user, -->
-        <%if current_user.present?%>
-          <%= form_tag home_user_path(current_user), :method => 'get' do %>
-            <p>
+              <!-- For now, can only search if a current user, -->
+              <%if current_user.present?%>
+                <%= form_tag home_user_path(current_user), :method => 'get' do %>
+                  <p>
               <%= text_field_tag :search, params[:search], class: "left" %>
               <%= submit_tag "Search", :name => nil, class: "left" %>
-           </p>
-          <% end %>
-        <% end %>
-     </li>
+
+                 </p>
+                <% end %>
+              <% end %>
+            </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
               <ul class="dropdown-menu">
